[package]
name = "dbce"
version = "0.1.4"
authors = ["Gabor Kecskemeti"]
edition = "2021"
default-run = "lichess"

[dependencies]
lazy_static = "1.4.0"
custom_error = "1.9.2"
rand = "0.8.5"
tikv-jemallocator = "0.5.0"
reqwest = { version = "0.11.16", features = ["stream", "json"] }
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = { version = "0.1.12", features = ["fs"] }
tokio-util = { version = "0.7.7", features = ["full"] }
futures-util = "0.3.28"
serde_json = "1.0.96"
ahash = "0.8.3"
enum-map = "2.5.0"
enumset = "1.0.12"
rustc-hash = "1.1.0"
enum-iterator = "1.4.0"
global_counter = "0.2.2"
sysinfo = "0.28.4"
rayon = "1.7"
generational-arena = "0.2.9"
itertools = "0.10.5"

[profile.release]
debug = 1
lto = "thin"
#strip = true
#panic = "abort"

[dev-dependencies]
criterion = "0.4.0"

#[[bench]]
#name = "max_depth"
#harness = false

[[bench]]
name = "raw_iter"
harness = false
