[package]
name = "dbce"
version = "0.1.5"
authors = ["Gabor Kecskemeti"]
edition = "2021"
default-run = "lichess"
readme = "Readme.md"
license = "GPL-3.0-or-later"

[dependencies]
lazy_static = "1.4.0"
custom_error = "1.9.2"
rand = "0.8.5"
tikv-jemallocator = "0.5.0"
reqwest = { version = "0.11.18", features = ["stream", "json"] }
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["fs"] }
tokio-util = { version = "0.7.8", features = ["full"] }
futures-util = "0.3.28"
serde_json = "1.0.103"
enum-map = "2.6.0"
enumset = "1.1.2"
rustc-hash = "1.1.0"
enum-iterator = "1.4.1"
global_counter = "0.2.2"
sysinfo = "0.29.5"
rayon = "1.7"
generational-arena = "0.2.9"
itertools = "0.11.0"
async-scoped = {version="0.7.1",features = ["tokio","use-tokio"]}
async-trait = "*"

[profile.release]
debug = 1
lto = "thin"
#strip = true
#panic = "abort"

[dev-dependencies]
criterion = "0.5.1"

#[[bench]]
#name = "max_depth"
#harness = false

[[bench]]
name = "raw_iter"
harness = false
